--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Click Serve</title>
+
+    <!-- link to external JS-->
+    <script src="clickserv.js"></script> 
+
     <!-- Link to external CSS -->
     <link rel="stylesheet" href="clickserve.css">
 </head>
